--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+### Gradle ###
+.gradle
+
 HELP.md
 target/
 !.mvn/wrapper/maven-wrapper.jar
@@ -32,6 +35,7 @@ build/
 ### VS Code ###
 .vscode/
 
-# certs
+### local kafka credentials
 ca.crt
 user.p12
+userpass.txt
