--- a/buildSrc/shared.gradle
+++ b/buildSrc/shared.gradle
@@ -38,17 +38,20 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
+
 sweeney {
     enforce "jdk:[" + sourceCompatibility + ",)"
 }
 
+spotless {
+    kotlin {
+        lineEndings = 'UNIX'
 
-String[] defaultJvmArgs = [
-        "-Duser.timezone=${defaultTimezone}",
-        "-Duser.language=${defaultLanguage}",
-        "-Dfile.encoding=UTF-8",
-        "-Dfile.encoding=UTF-8"
-]
+        trimTrailingWhitespace()
+        ktlint()
+    }
+}
+
 
 java {
     sourceCompatibility = "${sourceCompatibility}"
@@ -59,36 +62,6 @@ java {
 
 javadoc {
     options.addStringOption('Xdoclint:none', '-quiet')
-}
-
-springBoot {
-    buildInfo()
-
-    // build time optimization, no need to search whole class tree with large proto schema
-    mainClass = "eu.eliagroup.mccs.eas.web.EasWebApplicationKt"
-}
-
-compileKotlin.dependsOn bootBuildInfo
-
-bootJar {
-    layered {
-        enabled = true
-    }
-}
-
-bootRun {
-    jvmArgs(defaultJvmArgs)
-}
-
-bootBuildImage {
-    imageName = "${project.name}:${project.version}"
-
-    environment["BP_JVM_VERSION"] = "${targetCompatibility}"
-    environment["BPL_JVM_HEAD_ROOM"] = "10" // reserve 10% of container memory for container os
-
-    // TODO https://github.com/spring-projects/spring-boot/issues/38923
-    // buildpacks = ['gcr.io/paketo-buildpacks/graalvm', 'gcr.io/paketo-buildpacks/java-native-image']
-    // environment["BP_NATIVE_IMAGE"] = 'true'
 }
 
 tasks.withType(Test).configureEach {
