--- a/buildSrc/shared.gradle
+++ b/buildSrc/shared.gradle
@@ -75,3 +75,25 @@ tasks.withType(Test).configureEach {
     finalizedBy jacocoTestReport
 }
 
+bootBuildImage {
+    environment["BP_JVM_VERSION"] = "${targetCompatibility}"
+    environment["BPL_JVM_HEAD_ROOM"] = "10" // reserve 10% of container memory for container os
+
+    if("$System.env.DOCKER_REGISTRY_URL" != "null") {
+        imageName = "$System.env.DOCKER_REGISTRY_URL/${project.name}:${project.version}"
+    } else{
+        imageName = "${project.name}:${project.version}"
+    }
+
+    docker {
+        publishRegistry {
+            username = "$System.env.DOCKER_USERNAME"
+            password = "$System.env.DOCKER_PASSWORD"
+        }
+    }
+
+    // TODO https://github.com/spring-projects/spring-boot/issues/38923
+    // buildpacks = ['gcr.io/paketo-buildpacks/graalvm', 'gcr.io/paketo-buildpacks/java-native-image']
+    // environment["BP_NATIVE_IMAGE"] = 'true'
+}
+
