--- a/buildSrc/shared.gradle
+++ b/buildSrc/shared.gradle
@@ -115,4 +115,55 @@ bootRun {
     jvmArgs(defaultJvmArgs)
 }
 
+test {
+    useJUnitPlatform()
+    testLogging.events = ['failed', 'passed', 'skipped']
+    jvmArgs(defaultJvmArgs)
+
+    filter {
+        includeTestsMatching "*UnitTest"
+    }
+
+    jacoco {
+        includes = ['com/github/jschlarb/timestamp/**']
+    }
+}
+
+tasks.register('integrationTest', Test) {
+    group = 'verification'
+    useJUnitPlatform()
+    minHeapSize = '128m'
+    maxHeapSize = '2048m'
+    testLogging.events = ['failed', 'passed', 'skipped']
+    jvmArgs(defaultJvmArgs)
+
+    filter {
+        includeTestsMatching "*IntegrationTest"
+    }
+
+    jacoco {
+        includes = ['com/github/jschlarb/timestamp/**']
+    }
+}
+
+jacocoTestReport {
+    executionData.from(fileTree(layout.buildDirectory).include("/jacoco/*.exec"))
+
+    reports {
+        xml.required = true
+    }
+
+    // ugly, but another solution could not be found by now
+    // See: https://stackoverflow.com/questions/29887805/filter-jacoco-coverage-reports-with-gradle
+    afterEvaluate {
+        classDirectories.from = files(classDirectories.files.collect {
+            fileTree(dir: it, includes: ["com/github/jschlarb/timestamp/**"])
+        })
+    }
+}
+
+tasks.withType(Test).configureEach {
+    finalizedBy jacocoTestReport
+}
+
 
