fix artifact names

--- a/formatter/gradle.properties
+++ b/formatter/gradle.properties
@@ -1,6 +1,6 @@
 # app coordinates
 group=com.github.jschlarb.timestamp
-artifactId=producer
+artifactId=formatter
 
 # version is not really used yet, the pipes to some ugly Git magic there
 # just keep it for the moment, needs to be tackled by a proper release process
