test and build improvements

--- a/producer/src/test/resources/application.yaml
+++ b/producer/src/test/resources/application.yaml
@@ -17,7 +17,7 @@ management:
 
 spring:
   kafka:
-    bootstrap-servers: kafka:9055
+    bootstrap-servers: localhost:9055
     properties:
       auto.register.schemas: true
       schema.registry.url: http://schema-registry:8081
